--- a/workspace/pyproject.toml
+++ b/workspace/pyproject.toml
@@ -2,5 +2,6 @@
 name = "workspace"
 version = "0.1.0"
 description = "Add your description here"
+license = {text = "Apache-2.0"}
 requires-python = ">=3.10.18"
 dependencies = []
